--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,7 @@ venv/
 ENV/
 env.bak
 venv.bak
+backend/.env
 
 # IDE settings folders
 .idea/
@@ -65,6 +66,11 @@ venv.bak
 # Uploads folder for our app
 # We don't want to commit user-uploaded files
 uploads/
+backend/app/uploads/
 
 # Mac files
 .DS_Store
+
+*.pyc
+speech-ui/node_modules/
+speech-ui/dist/
